--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,5 +2,11 @@
   "version": 2,
   "name": "chat-app",
   "builds": [{ "src": "index.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/index.js" }]
+  "routes": [{ "src": "/(.*)", "dest": "/index.js" }],
+  "functions": {
+    "myFunction": {
+      "memory": 1024,
+      "maxDuration": 30
+    }
+  }
 }
